--- a/public/index.html
+++ b/public/index.html
@@ -33,16 +33,29 @@
     
     <!-- header -->
     <header>
-        <div>
-            <img src="/images/profile-hex.png"> 
-        </div>
-        <br>
-        <div>
-            <h2>Your Name</h2>
+          <div>
+              <img src="/images/profile-hex.png"> 
+          </div>
+          <!-- <br> -->
+          <div>
+              <h2><span>Your</span> Name</h2>
+          </div>
         </div>
     </header> <!-- header ends -->
     
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form>
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
