Remove hardcoded elements. make them dynamic

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<<<<<<< HEAD
     <!-- Meta Information -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
@@ -43,15 +45,8 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-=======
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
->>>>>>> 2af2c51e32490e5dbffab4db69b369395e662a95
   </head>
   <body>
-<<<<<<< HEAD
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="logo">tweeter</span>
@@ -72,17 +67,10 @@
         <img src="/images/profile-hex.png" />
       </div>
       <br />
-=======
-    <header class="header-main">
-      <div>
-        <img src="/images/profile-hex.png" />
-      </div>
->>>>>>> 2af2c51e32490e5dbffab4db69b369395e662a95
       <div>
         <h2><span>Your</span> Name</h2>
       </div>
     </header>
-<<<<<<< HEAD
     <!-- header ends -->
 
     <!-- Page-specific (main) content here -->
@@ -106,10 +94,7 @@
         </form>
       </section>
       <!-- section new-tweet ends -->
-      <section id="tweets-container">
-      </section>
+      <section id="tweets-container"></section>
     </main>
-=======
->>>>>>> 2af2c51e32490e5dbffab4db69b369395e662a95
   </body>
 </html>
