--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <!-- Meta Information -->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
@@ -51,8 +51,7 @@
     <nav>
       <span class="logo">tweeter</span>
       <div class="tweet-arrow">
-        <!--make a button maybe instead?-->
-        <p><span>Write</span> a new tweet</p>
+        <button><p><span>Write</span> a new tweet</p></button>
         <div class="arrow">
           <i class="fas fa-angle-double-down" aria-hidden="true"></i>
           <span class="sr-only">Press to make a tweet</span>
@@ -77,7 +76,9 @@
     <main class="container">
       <!-- section .new-tweet -->
       <section class="new-tweet">
-        <!-- <h2>Compose Tweet</h2> -->
+        <!-- error messages -->
+        <div class="error"></div>
+
         <form method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea
@@ -95,6 +96,7 @@
       </section>
       <!-- section new-tweet ends -->
       <section id="tweets-container"></section>
-    </main>
+    </main> 
+    <!-- main container ends -->
   </body>
 </html>
