Clean up the html, remove unnecessary comments

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,9 @@
     <nav>
       <span class="logo">tweeter</span>
       <div class="tweet-arrow">
-        <button><p><span>Write</span> a new tweet</p></button>
+        <button>
+          <p><span>Write</span> a new tweet</p>
+        </button>
         <div class="arrow">
           <i class="fas fa-angle-double-down" aria-hidden="true"></i>
           <span class="sr-only">Press to make a tweet</span>
@@ -96,7 +98,10 @@
       </section>
       <!-- section new-tweet ends -->
       <section id="tweets-container"></section>
-    </main> 
+      <button class="scroll">
+        <i class="fas fa-angle-double-up"></i>
+      </button>
+    </main>
     <!-- main container ends -->
   </body>
 </html>
