--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       </div>
       <br />
       <div>
-        <h2><span>Your</span> Name</h2>
+        <h2><span>Amy</span> Mansell</h2>
       </div>
     </header>
     <!-- header ends -->
